Update and fix Quarkus FruitStore demo
